<resources>
    <string name="app_name">ProjetMOBE</string>
    <string name="badJack">T\'es mauvais Jack!</string>
    <string name="reach">Tu as atteint</string>
    <string name="points">points</string>
    <string name="publish">Publier</string>
    <string name="retry">Réessayer</string>
    <string name="play">Jouer</string>
    <string name="menu">Menu</string>
    <string name="cancel">Fermer</string>
    <string name="send">Envoyer</string>
</resources>
